--- a/conformance/base/manifests.yaml
+++ b/conformance/base/manifests.yaml
@@ -300,7 +300,7 @@ spec:
       volumes:
       - name: secret-volume
         secret:
-          secretName: tls-passthrough-checks-certificate
+          secretName: tls-checks-certificate
           items:
           - key: tls.crt
             path: crt
@@ -770,7 +770,7 @@ spec:
     spec:
       containers:
       - name: backendtlspolicy-test
-        image: gcr.io/k8s-staging-gateway-api/echo-basic:v20240412-v1.0.0-394-g40c666fd
+        image: gcr.io/k8s-staging-gateway-api/echo-basic:v20240827-v1.1.0-121-g650e404a
         volumeMounts:
         - name: secret-volume
           mountPath: /etc/secret-volume
