--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -227,7 +227,7 @@ spec:
                   Infrastructure defines infrastructure level attributes about this Gateway instance.
 
 
-                  Support: Core
+                  Support: Extended
                 properties:
                   annotations:
                     additionalProperties:
@@ -1553,7 +1553,7 @@ spec:
                   Infrastructure defines infrastructure level attributes about this Gateway instance.
 
 
-                  Support: Core
+                  Support: Extended
                 properties:
                   annotations:
                     additionalProperties:
