--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -283,14 +283,15 @@ spec:
                       pattern: ^(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])?$
                       type: string
                     description: |-
-                      Labels that SHOULD be applied to any resources created in response to this Gateway.
-
-
                       For implementations creating other Kubernetes objects, this should be the `metadata.labels` field on resources.
                       For other implementations, this refers to any relevant (implementation specific) "labels" concepts.
 
 
                       An implementation may chose to add additional implementation-specific labels as they see fit.
+
+
+                      If an implementation maps these labels to Pods, or any other resource that would need to be recreated when labels
+                      change, it SHOULD clearly warn about this behavior in documentation.
 
 
                       Support: Extended
@@ -1609,14 +1610,15 @@ spec:
                       pattern: ^(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])?$
                       type: string
                     description: |-
-                      Labels that SHOULD be applied to any resources created in response to this Gateway.
-
-
                       For implementations creating other Kubernetes objects, this should be the `metadata.labels` field on resources.
                       For other implementations, this refers to any relevant (implementation specific) "labels" concepts.
 
 
                       An implementation may chose to add additional implementation-specific labels as they see fit.
+
+
+                      If an implementation maps these labels to Pods, or any other resource that would need to be recreated when labels
+                      change, it SHOULD clearly warn about this behavior in documentation.
 
 
                       Support: Extended
