--- a/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
@@ -189,6 +189,9 @@ spec:
                       minLength: 0
                       type: string
                     description: |-
+                      Labels that SHOULD be applied to any resources created in response to this Gateway.
+
+
                       For implementations creating other Kubernetes objects, this should be the `metadata.labels` field on resources.
                       For other implementations, this refers to any relevant (implementation specific) "labels" concepts.
 
@@ -1317,6 +1320,9 @@ spec:
                       minLength: 0
                       type: string
                     description: |-
+                      Labels that SHOULD be applied to any resources created in response to this Gateway.
+
+
                       For implementations creating other Kubernetes objects, this should be the `metadata.labels` field on resources.
                       For other implementations, this refers to any relevant (implementation specific) "labels" concepts.
 
