--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,6 +134,7 @@ nav:
       - geps/gep-1897/index.md
       - geps/gep-1911/index.md
       - geps/gep-2162/index.md
+      - geps/gep-3171/index.md
     - Standard:
       - geps/gep-709/index.md
       - geps/gep-718/index.md
