--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -123,9 +123,9 @@ nav:
       - geps/gep-1867/index.md
       - geps/gep-2648/index.md
       - geps/gep-2649/index.md
-    - Implementable:
-      - geps/gep-995/index.md
+    # - Implementable:
     - Experimental:
+      - geps/gep-995/index.md
       - geps/gep-1619/index.md
       - geps/gep-1731/index.md
       - geps/gep-1748/index.md
